--- a/book.toml
+++ b/book.toml
@@ -30,7 +30,8 @@ verbose = false # Report timing information.
 # command = "./aspect-ratio-helper.py"
 
 [output.pandoc]
-optional = true
+#optional = true
+optional = false
 
 [output.pandoc.profile.pdf]
 output-file = "comprehensive-rust.pdf"
