--- a/.github/workflows/install-mdbook/action.yml
+++ b/.github/workflows/install-mdbook/action.yml
@@ -26,3 +26,7 @@ runs:
     - name: Install mdbook-course
       run: cargo install --path mdbook-course --locked
       shell: bash
+
+    - name: Install mdbook-pandoc
+      run: cargo install --path mdbook-pandoc --locked
+      shell: bash
