--- a/.github/workflows/install-mdbook/action.yml
+++ b/.github/workflows/install-mdbook/action.yml
@@ -28,5 +28,5 @@ runs:
       shell: bash
 
     - name: Install mdbook-pandoc
-      run: cargo install --path mdbook-pandoc --locked
+      run: cargo install mdbook-pandoc --locked
       shell: bash
